nwnet-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwnet
  labels:
    app: nwnet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nwnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nwnet
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: nwnet
            topologyKey: kubernetes.io/hostname      
      containers:
      - image: jkozik/nw.net:v1
        name: nwnet
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            ephemeral-storage: 100M
            memory: 100M
          limits:
            ephemeral-storage: 200M
            memory: 200M          
        ports:
        - containerPort: 80
          name: nwnet
        volumeMounts:
        - name: nwcom-persistent-storage
          mountPath: "/var/www/html/mount" 
      volumes:
      - name: nwcom-persistent-storage
        persistentVolumeClaim:
          claimName: nwcom-persistent-storage
