nwnet-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nwnet
  labels:
    app: nwnet
spec:
  ports:
    - port: 80
  selector:
    app: nwnet
  type: NodePort
