nwnet-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nwnet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: napervilleweather.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nwnet
            port:
              number: 80
